@@ -4,6 +4,7 @@ Pending changes in the mainline
 
 * Fix for big-endian architectures (RedHat bug #985748)
 * Refactoring of the CMake options
+* Possibility to build Orthanc inplace (in the source directory)
 
 
 Version 0.7.0 (2013/10/25)
